tests/c_programs/int_wrapping/invalid_parse/above_max.c

int main(void) {
    int int_max = 2147483648; //too large
    return int_max;
}